# diecut

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh  justfile  release-please-config.json
.github/workflows/: ci.yml  external-templates.yml  release-please.yml  release.yml
benches/: benchmarks.rs
crates/diecut-cli/: CHANGELOG.md  Cargo.toml
crates/diecut-cli/src/: cli.rs  main.rs
crates/diecut-cli/src/commands/: check.rs  list.rs  migrate.rs  mod.rs  new.rs  publish.rs  ready.rs  search.rs  update.rs
crates/diecut-core/: CHANGELOG.md  Cargo.toml
crates/diecut-core/src/: check.rs  error.rs  lib.rs  ready.rs
crates/diecut-core/src/adapter/: cookiecutter.rs  detect.rs  migrate.rs  mod.rs  native.rs
crates/diecut-core/src/answers/: mod.rs
crates/diecut-core/src/compose/: mod.rs  overlay.rs
crates/diecut-core/src/config/: mod.rs  schema.rs  user.rs  variable.rs
crates/diecut-core/src/hooks/: mod.rs  rhai_runtime.rs
crates/diecut-core/src/prompt/: engine.rs  mod.rs
crates/diecut-core/src/registry/: mod.rs  search.rs
crates/diecut-core/src/render/: context.rs  file.rs  walker.rs
crates/diecut-core/src/template/: cache.rs  clone.rs  mod.rs  source.rs
crates/diecut-core/src/update/: diff.rs  merge.rs  mod.rs
crates/diecut-core/tests/: integration.rs
docs/: .gitignore  astro.config.mjs  package.json
docs/plans/: 2026-02-12-astro-cf-template-migration-design.md  2026-02-12-docs-redesign-design.md  2026-02-12-docs-redesign-plan.md  2026-02-13-git-cli-auth-design.md  2026-02-15-generation-pipeline-tests.md  2026-02-15-output-tests.md  2026-02-15-test-coverage-design.md  2026-02-15-user-input-tests.md
docs/public/: llms.txt
docs/src/content/docs/: index.mdx  migrating-from-cookiecutter.md
docs/src/content/docs/creating-templates/: index.mdx
docs/src/content/docs/examples/: code-scaffolding.md  fastapi-endpoint.md  monorepo-packages.md  personal-template.md  prompt-template.md  repeating-patterns.md  structured-content.md
docs/src/content/docs/getting-started/: index.mdx
docs/src/content/docs/reference/: commands.md  diecut-toml.md  hooks.md
docs/src/content/docs/tutorials/: code-scaffolding.md  fastapi-endpoint.md  monorepo-packages.md  personal-template.md  prompt-template.md  repeating-patterns.md  structured-content.md
docs/src/content/docs/using-templates/: index.mdx
docs/superpowers/plans/: 2026-04-11-131-ssh-default.md
docs/superpowers/specs/: 2026-04-11-131-ssh-default-design.md
examples/python-pkg/: README.md  diecut.toml
examples/python-pkg/template/: pyproject.toml.tera
examples/python-pkg/template/src/: cli.py.tera
examples/rust-cli/: README.md  diecut.toml
examples/rust-cli/template/: Cargo.toml.tera
examples/rust-cli/template/src/: main.rs.tera
src/: check.rs  cli.rs  error.rs  lib.rs  main.rs  ready.rs
src/adapter/: detect.rs  migrate.rs  mod.rs  native.rs
src/answers/: mod.rs
src/commands/: check.rs  distill.rs  extract.rs  list.rs  migrate.rs  mod.rs  new.rs  ready.rs  update.rs
src/config/: mod.rs  schema.rs  variable.rs
src/distill/: intersect.rs  mod.rs  validate.rs
src/extract/: auto_detect.rs  conditional.rs  config_gen.rs  default_excludes.txt  exclude.rs  interactive.rs  mod.rs  replace.rs  scan.rs  stub.rs  variants.rs
src/hooks/: mod.rs  rhai_runtime.rs
src/prompt/: engine.rs
src/render/: context.rs  file.rs  mod.rs  walker.rs
src/template/: cache.rs  clone.rs  mod.rs  source.rs
src/update/: merge.rs  mod.rs
tests/: integration.rs
tests/fixtures/basic-template/: diecut.toml
tests/fixtures/basic-template/template/{{project_name}}/: Dockerfile  README.md.tera
tests/fixtures/basic-template/template/{{project_name}}/src/: main.rs.die
tests/fixtures/cookiecutter-basic/: cookiecutter.json
tests/fixtures/cookiecutter-basic/{{cookiecutter.project_slug}}/: README.md  setup.py
tests/fixtures/cookiecutter-with-hooks/: cookiecutter.json
tests/fixtures/cookiecutter-with-hooks/hooks/: post_gen_project.py
tests/fixtures/distill-project-a/: Cargo.toml  README.md
tests/fixtures/distill-project-a/src/: main.rs
tests/fixtures/distill-project-b/: Cargo.toml  README.md
tests/fixtures/distill-project-b/src/: main.rs
tests/fixtures/distill-project-c/: Cargo.toml  README.md
tests/fixtures/distill-project-c/src/: main.rs
