[workspace]
members = ["crates/diecut-cli", "crates/diecut-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
diecut-core = { path = "crates/diecut-core" }
tera = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
regex-lite = "0.1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
walkdir = "2"
console = "0.15"
dirs = "6"
rhai = { version = "1", features = ["sync"] }
tempfile = "3"
gix = { version = "0.72", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
sha2 = "0.10"
similar = "2"
fs4 = "0.12"
content_inspector = "0.2"
