[workspace]

[package]
name = "diecut"
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.75"
description = "A language-agnostic project template generator"

[lib]
name = "diecut"
path = "src/lib.rs"

[[bin]]
name = "diecut"
path = "src/main.rs"

[dependencies]
tera = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
regex-lite = "0.1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
walkdir = "2"
console = "0.15"
dirs = "6"
rhai = { version = "1", features = ["sync"] }
tempfile = "3"
sha2 = "0.10"
similar = "2"
fs4 = "0.12"
content_inspector = "0.2"
