[workspace]

[package]
name = "diecut"
version = "0.3.3"
edition = "2021"
license = "MIT"
rust-version = "1.75"
description = "A single binary project template generator"

[lib]
name = "diecut"
path = "src/lib.rs"

[[bin]]
name = "diecut"
path = "src/main.rs"

[dependencies]
tera = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
regex-lite = "0.1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
walkdir = "2"
console = "0.15"
dirs = "6"
tempfile = "3"
sha2 = "0.10"
fs4 = "0.12"
content_inspector = "0.2"
indexmap = { version = "2.11.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.23"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
