[package]
name = "diecut-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for diecut template engine"

[dependencies]
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }
regex-lite = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
walkdir = { workspace = true }
inquire = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
rhai = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
